src/Components/Articles/Articles.scss
.articles {
    width: 90%;
    margin: 0 auto;
    overflow: hidden;
    .cardContainer {
        display: flex;
        flex-direction: row;
        flex-grow: 1;
        flex-wrap: wrap;
        justify-content: space-around;

        align-items: center;

        .pageHead {
            width: 100%;
            h3 {
                text-align: center;
            }
            small {
                display: block;
                text-align: center;
            }

        }
        .card {
            width: 25%;
            height: 240px;
            color: white;

            margin-top:15px;
            min-height:150px;
            margin: 15px 10px;

            box-shadow: 8px 10px 10px rgba(0, 0, 0, 0.5);

            transition: ease all .3s;
            @media only screen and(max-width: 900px) {
                width: 45%;
            }
            @media only screen and(max-width: 500px) {
                width: 100%;
                .cardInner {
                    background-color: rgba(0,0,0,0.4);

                    opacity: 1!important
                }
            }
            &:hover {
                box-shadow: 12px 14px 15px rgba(0, 0, 0, 0.4);
                .cardInner {
                    background-color: rgba(0,0,0,0.4);

                    opacity: 1;
                }
            }
            .cardInner{
                opacity: 0;
                transition: ease opacity .3s;

                width: 100%;
                height:100%;
                color:white;

                display: flex;
                flex-direction: row;
                flex-wrap: wrap;
                span {
                    padding-top:10px;
                    display: block;
                    width: 100%;
                    text-align:center;
                    align-self: center;
                    height:20px;
                }
                .button {
                    align-self: center;

                    display: block;
                    margin: 0 auto;

                    padding:10px 15px;

                    color:black;
                    background-color: #e2dcd5;
                    text-decoration: none;
                    transition: ease all .3s;
                    &:hover {
                        background-color: #333;
                        color:#e2dcd5;
                    }
                }
                .iconWrapper {
                    opacity: 1;
                    align-self: flex-end;
                    width:100%;
                    text-align:center;
                    padding-bottom:15px;
                }
            }
        }
    }
}
.loader {
    position: absolute;
    width: 100%;
    height: 80vh;
    display: flex;
    align-items: center;
    text-align: center;
    background-color: rgba(255,255,255,0.5);
    .sk-fade-in {
        display: block;
        margin: 0 auto;
        margin-bottom: 25vh;
    }
}

